# metadatos

./: CHANGELOG.md  README.md  gen_samples.py  main.py  metadatos.py  pyproject.toml  requirements.txt  test_metadatos.py
samples/: sample.md  sample.py  sample.rs  sample.sh
